# b612

./: boo.c  foo.c
integration/: embed.c  simplevvadd.map  testblock.py
machsuite/: Makefile  output-o3.csv  output.txt
machsuite/_machsuite/: alloc.mk  common.mk  prof.mk
machsuite/gemm-int/: Makefile  bench-prof.ll  bench.c  gemm-prof.ll
machsuite/machsuite-aes/: Makefile  aes.h
machsuite/machsuite-backprop/: Makefile  bench.c
machsuite/machsuite-bfs-bulk/: Makefile
machsuite/machsuite-bfs-queue/: Makefile
machsuite/machsuite-fft-strided/: Makefile  bench.c
machsuite/machsuite-fft-transpose/: Makefile
machsuite/machsuite-gemm-ncubed/: Makefile
machsuite/machsuite-gemm-ncubed-int/: Makefile
machsuite/machsuite-kmp/: Makefile  bench.c
machsuite/machsuite-md-grid/: Makefile  bench.c
machsuite/machsuite-md-knn/: common.mk
machsuite/machsuite-nw/: Makefile  opt.mk
machsuite/machsuite-sort-merge/: Makefile
machsuite/machsuite-sort-radix/: Makefile
machsuite/machsuite-spmv-crs/: Makefile  prof.mk
machsuite/machsuite-spmv-ellpack/: Makefile
machsuite/machsuite-stencil-stencil2d/: Makefile
machsuite/machsuite-stencil-stencil3d/: Makefile
machsuite/machsuite-viterbi/: Makefile  alloc.mk
skeleton/: CMakeLists.txt  Salhton.cpp  Shackleton.cpp  Shelton.cpp  Singleton.cpp  Skeleton.cpp  Stilton.cpp
tests/: common.mk
tests/diamond/: Makefile  diamond.c  diamond.h  main.c
tests/example/: Makefile  common.mk  embed.c  multiply.py  rtlib.c  sim_lib.py
tests/foo/: Makefile
tests/for/: Makefile  for.c
tests/memd/: Makefile  memd.c
(+10 files in other folders)
